cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 17)


add_executable(C__ main.cpp
        01_第一章_数据类型、运算符与表达式/字面常量.cpp
        01_第一章_数据类型、运算符与表达式/符号常量.cpp
        01_第一章_数据类型、运算符与表达式/变量的声明和赋值.cpp
        01_第一章_数据类型、运算符与表达式/符号常量练习题.cpp
        01_第一章_数据类型、运算符与表达式/变量的特征.cpp
        01_第一章_数据类型、运算符与表达式/变量的快速定义.cpp
        other_tmp/tmp.cpp
        01_第一章_数据类型、运算符与表达式/整型数据类型和sizeof函数.cpp
)
