cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 17)


add_executable(C__ main.cpp
        01_第一章_数据类型、运算符与表达式/字面常量.cpp
        01_第一章_数据类型、运算符与表达式/符号常量.cpp
        01_第一章_数据类型、运算符与表达式/变量的声明和赋值.cpp
        01_第一章_数据类型、运算符与表达式/符号常量练习题.cpp
        01_第一章_数据类型、运算符与表达式/变量的特征.cpp
        01_第一章_数据类型、运算符与表达式/变量的快速定义.cpp
        01_第一章_数据类型、运算符与表达式/整型数据类型和sizeof函数.cpp
        "01_第一章_数据类型、运算符与表达式/无符号和有符号数字(整数演示).cpp"
        01_第一章_数据类型、运算符与表达式/标识符和关键字.cpp
        01_第一章_数据类型、运算符与表达式/实型数据类型.cpp
        01_第一章_数据类型、运算符与表达式/字符型数据类型.cpp
        01_第一章_数据类型、运算符与表达式/转义字符.cpp
        other_tmp/tmp.cpp
        01_第一章_数据类型、运算符与表达式/字符串数据类型.cpp
        01_第一章_数据类型、运算符与表达式/cin数据输入.cpp
        01_第一章_数据类型、运算符与表达式/cin数据输入练习题.cpp
        other_tmp/tmp2.cpp
        01_第一章_数据类型、运算符与表达式/cin中文乱码解决演示代码.cpp
        01_第一章_数据类型、运算符与表达式/C++常量类型的确定.cpp
        01_第一章_数据类型、运算符与表达式/算术运算符.cpp
)
