cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 17)


add_executable(C__ main.cpp
        01_第一章_数据类型、运算符/字面常量.cpp
        01_第一章_数据类型、运算符/符号常量.cpp
        01_第一章_数据类型、运算符/变量的声明和赋值.cpp
        01_第一章_数据类型、运算符/符号常量练习题.cpp
        01_第一章_数据类型、运算符/变量的特征.cpp
        01_第一章_数据类型、运算符/变量的快速定义.cpp
        01_第一章_数据类型、运算符/整型数据类型和sizeof函数.cpp
        "01_第一章_数据类型、运算符/无符号和有符号数字(整数演示).cpp"
        01_第一章_数据类型、运算符/标识符和关键字.cpp
        01_第一章_数据类型、运算符/实型数据类型.cpp
        01_第一章_数据类型、运算符/字符型数据类型.cpp
        01_第一章_数据类型、运算符/转义字符.cpp
        other_tmp/tmp.cpp
        01_第一章_数据类型、运算符/字符串数据类型.cpp
        01_第一章_数据类型、运算符/cin数据输入.cpp
        01_第一章_数据类型、运算符/cin数据输入练习题.cpp
        other_tmp/tmp2.cpp
        01_第一章_数据类型、运算符/cin中文乱码解决演示代码.cpp
        01_第一章_数据类型、运算符/C++常量类型的确定.cpp
        01_第一章_数据类型、运算符/算术运算符.cpp
        01_第一章_数据类型、运算符/赋值运算符.cpp
        01_第一章_数据类型、运算符/布尔数据类型.cpp
        01_第一章_数据类型、运算符/比较运算符.cpp
        01_第一章_数据类型、运算符/逻辑运算符.cpp
        01_第一章_数据类型、运算符/三元运算符练习题.cpp
        01_第一章_数据类型、运算符/三元运算符.cpp
        02_第二章_控制结构/if逻辑判断语句.cpp
        02_第二章_控制结构/if逻辑判断语句练习题.cpp
        "02_第二章_控制结构/if else语句.cpp"
        "02_第二章_控制结构/else if语句.cpp"
        "02_第二章_控制结构/if else语句练习题.cpp"
        "02_第二章_控制结构/else if 语句练习题.cpp"
        02_第二章_控制结构/逻辑判断语句的嵌套练习题.cpp
        02_第二章_控制结构/逻辑判断语句的嵌套.cpp
)
